# rules_7zip

./: .bazelignore  .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extension_setup_7zip.bzl  posix.BUILD.bazel  repo.bzl  setup.bzl  windows.BUILD.bazel
.github/workflows/: main.yml
example/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE
example/strip/the/path/: BUILD.bazel  stripped_example.txt
patches/: BUILD.bazel  p7zip_cpu_arch_include.patch
