load("@rules_7zip//:defs.bzl", "pkg_7z")

genrule(
    name = "genrule_example",
    srcs = ["example.txt"],
    tools = ["@zip7//:7za"],
    outs = ["genrule_example.7z"],
    cmd = "$(location @zip7//:7za) a $@ $(SRCS)",
)

pkg_7z(
    name = "example",
    srcs = ["example.txt"],
)

pkg_7z(
    name = "example_zip",
    extension = "zip",
    srcs = ["example.txt"],
)

pkg_7z(
    name = "all_examples",
    srcs = [
        "example.txt",
        ":example",
        ":example_zip",
    ],
)
