load("@rules_7zip//:defs.bzl", "pkg_7z")

genrule(
    name = "genrule_example",
    srcs = ["example.txt"],
    outs = ["genrule_example.7z"],
    cmd = "$(location @7zip//:7za) a $@ $(SRCS)",
    tools = ["@7zip//:7za"],
)

pkg_7z(
    name = "example",
    srcs = ["example.txt"],
)

pkg_7z(
    name = "example_zip",
    srcs = ["example.txt"],
    extension = "zip",
)

pkg_7z(
    name = "all_examples",
    srcs = [
        "example.txt",
        ":example",
        ":example_zip",
    ],
)
